@@ -1,3 +1,8 @@
+2010-03-02  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Main.cs: Added boxing tests. Disable assignment tests for
+	  MDB only, they now work with SDB.
+
 2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Debugger.Tests.TestApp.csproj: Flush.
